--- a/css/style.css
+++ b/css/style.css
@@ -582,6 +582,28 @@ hr {
     color: #fff;
 }
 
+/* btn-download */
+.btn-download {
+    display: block;
+    background-color: #FF5722;
+    margin-top: 4px;
+    padding: 4px 12px;
+    border-radius: 2px;
+
+}
+
+
+.widget .btn-download {
+
+    color: #fff;
+}
+
+/* btn load-more*/
+.btn.load-more {
+
+    margin-top: 40px;
+}
+
 .btn-lg,
 .btn-lg.btn-button {
     font-size: 14px;
@@ -3438,7 +3460,7 @@ screen and (max-height: 300px) {
     border-radius: 3px;
     background-color: #2D95E3;
     padding: 2px 6px;
-    
+
     text-align: center;
     font-weight: 700;
     color: #fff;
