--- a/css/style.css
+++ b/css/style.css
@@ -591,8 +591,6 @@ hr {
     border-radius: 2px;
 
 }
-
-
 .widget .btn-download {
 
     color: #fff;
@@ -3179,7 +3177,7 @@ screen and (max-height: 300px) {
 -------------------------------------------------------*/
 .post-list {
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 28px;
     min-height: 241px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -3203,7 +3201,11 @@ screen and (max-height: 300px) {
     margin-right: 30px;
     margin-bottom: 0;
 }
-
+.style-search .post-list__img-holder{
+    -ms-flex: 0 0 32%;
+    flex: 0 0 32%;
+    
+}
 @media only screen and (max-width: 991px) {
     .post-list__img-holder {
         width: 170px;
@@ -3216,7 +3218,11 @@ screen and (max-height: 300px) {
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
 }
-
+.style-search .post-list__body{
+    -ms-flex:auto;
+    flex: auto;
+   
+}
 @media only screen and (max-width: 575px) {
     .post-list {
         display: block;
@@ -4270,7 +4276,8 @@ figcaption {
 /* Pagination
 /*-------------------------------------------------------*/
 .pagination {
-    margin-top: 40px;
+   
+    
     text-align: center;
 }
 
@@ -6902,9 +6909,9 @@ dd {
     box-shadow: none;
 }
 
-.style-games .card__body {
+.style-home .card__body {
     /*		border: 1px solid #E3E4E8; */
-    padding: 0px 0px 0px 32px;
+  padding: 0px 0px 0px 32px;
 }
 
 .style-games .footer__widgets {
