--- a/css/style.css
+++ b/css/style.css
@@ -591,6 +591,7 @@ hr {
     border-radius: 2px;
 
 }
+
 .widget .btn-download {
 
     color: #fff;
@@ -2449,6 +2450,55 @@ screen and (max-height: 300px) {
     backface-visibility: hidden;
 }
 
+/* apps categories */
+
+.apps-block {
+    padding: 40px;
+    background-color: #f7f7f7;
+
+}
+
+.apps-block .rating {
+
+    text-align: center;
+    border-right: 1px solid #ddd;
+    margin-bottom: 0;
+}
+
+.rating p {
+    margin-top: 10px;
+}
+
+.rating span {
+
+    font-size: 32px;
+    font-weight: bold;
+}
+
+.rating figcaption {
+    margin-top: 0;
+}
+
+.apps-block .info {
+    padding-left: 30px;
+}
+
+.info p {
+    margin: 0;
+}
+
+.info .download a {
+    width: 144px;
+    height: auto;
+    display: inline-block;
+    margin-top: 20px;
+    margin-right: 10px;
+}
+
+
+
+
+/* --------------- */
 .footer--dark .thumb-container {
     background-color: #171821;
 }
@@ -3016,7 +3066,7 @@ screen and (max-height: 300px) {
 }
 
 .title-wrap--line {
-    border-top: 1px solid #888994;
+    border-top: 1px solid #ddd;
     padding-top: 32px;
 }
 
@@ -3201,11 +3251,13 @@ screen and (max-height: 300px) {
     margin-right: 30px;
     margin-bottom: 0;
 }
-.style-search .post-list__img-holder{
+
+.style-search .post-list__img-holder {
     -ms-flex: 0 0 32%;
     flex: 0 0 32%;
-    
+
 }
+
 @media only screen and (max-width: 991px) {
     .post-list__img-holder {
         width: 170px;
@@ -3218,11 +3270,13 @@ screen and (max-height: 300px) {
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
 }
-.style-search .post-list__body{
-    -ms-flex:auto;
+
+.style-search .post-list__body {
+    -ms-flex: auto;
     flex: auto;
-   
+
 }
+
 @media only screen and (max-width: 575px) {
     .post-list {
         display: block;
@@ -3998,7 +4052,7 @@ figcaption {
 /* Final Review
 /*-------------------------------------------------------*/
 .final-review {
-    background-color: #171821;
+    background-color: #f7f7f7;
     margin-bottom: 48px;
     background-position: center;
     background-repear: no-repeat;
@@ -4038,7 +4092,7 @@ figcaption {
 }
 
 .final-review__text-holder {
-    padding: 48px 40px;
+    padding: 28px 20px;
     -webkit-box-flex: 1;
     -ms-flex: 1 0 50%;
     flex: 1 0 50%;
@@ -4276,8 +4330,8 @@ figcaption {
 /* Pagination
 /*-------------------------------------------------------*/
 .pagination {
-   
-    
+
+
     text-align: center;
 }
 
@@ -6911,7 +6965,7 @@ dd {
 
 .style-home .card__body {
     /*		border: 1px solid #E3E4E8; */
-  padding: 0px 0px 0px 32px;
+    padding: 0px 0px 0px 32px;
 }
 
 .style-games .footer__widgets {
