changed size of apps cover images

--- a/css/style.css
+++ b/css/style.css
@@ -2219,11 +2219,14 @@ screen and (max-height: 300px) {
 
 .entry__img-holder {
     position: relative;
-    overflow: hidden;
+/*    overflow: hidden;*/
     margin-bottom: 20px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%;
+    
+    width: 144px;
+    height: 144px;
 }
 
 .entry__img {
@@ -2434,7 +2437,7 @@ screen and (max-height: 300px) {
 .thumb-container {
     background-color: #f7f7f7;
     position: relative;
-    overflow: hidden;
+/*    overflow: hidden;*/
     -webkit-transform: translateZ(0);
     transform: translateZ(0);
 }
